# Slicer-SurfaceFragmentsRegistration

./: CMakeLists.txt  README.md
SurfaceFragmentsRegistration/: CMakeLists.txt  SurfaceFragmentsRegistration.py
SurfaceFragmentsRegistration/Resources/UI/: SurfaceFragmentsRegistration.ui
SurfaceFragmentsRegistration/Testing/: CMakeLists.txt
SurfaceFragmentsRegistration/Testing/Assets/: sourceModel.vtk  targetModel.vtk
